--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script type="text/javascript" src="vendor.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript">
       require('index');
